--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
       "vue-router": "^4.2.4"
    },
    "devDependencies": {
-      "@vitejs/plugin-vue": "^4.2.3"np,
+      "@vitejs/plugin-vue": "^4.2.3",
       "autoprefixer": "^10.4.15",
       "daisyui": "^3.5.1",
       "postcss": "^8.4.28",
